[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nessus-cli"
dynamic = ["version"]
description = 'Pause, resume, list, check the status of, or export a Nessus scan. There is also the option to schedule a pause or resume action. Telegram bot support is also included.'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Luke Minniear", email = "lukeminniear@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "certifi==2023.7.22",
  "charset-normalizer==3.2.0",
  "idna==3.4",
  "python-dotenv==1.0.0",
  "requests==2.31.0",
  "urllib3==2.0.4"
]

[project.urls]
Documentation = "https://github.com/minniear/nessus-cli#readme"
Issues = "https://github.com/minniear/nessus-cli/issues"
Source = "https://github.com/minniear/nessus-cli"

[tool.hatch.version]
path = "src/nessus_cli/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "certifi==2023.7.22",
  "charset-normalizer==3.2.0",
  "idna==3.4",
  "python-dotenv==1.0.0",
  "requests==2.31.0",
  "urllib3==2.0.4"
]
[tool.hatch.envs.default.scripts]
nessus-cli = "python3 src/nessus_cli/schedule_nessus.py {args:-h}"

[project.scripts]
nessus-cli = "nessus_cli.schedule_nessus:main"

